# frasian_tilting

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  WALDO_Tilting_Frasian_Inference_v2.docx  pyproject.toml  requirements.txt
.claude/agents/: deriver.md  literature-reviewer.md  skeptic.md
.claude/commands/: critique.md  derive.md  litreview.md  propose-method.md
.github/: last-full-run.json
.github/workflows/: ci-full.yaml  ci.yaml  method-completeness.yaml
artifacts/: README.md  learned_eta_canonical_bernoulli_powerlaw_v0_smoke.eqx  learned_eta_canonical_normal_normal_ot_v0_smoke.eqx  learned_eta_canonical_normal_normal_ot_v0_smoke.pt  learned_eta_canonical_normal_normal_powerlaw_v0_smoke.eqx  learned_eta_canonical_normal_normal_powerlaw_v0_smoke.pt  learned_eta_ot_v0_smoke.pt  learned_eta_power_law_v0_smoke.pt  probe_pl_anti_wald_10_v4.eqx  probe_pl_no_boundary_v4.eqx  probe_pl_no_norm_v4.eqx
docs/: PR_DESCRIPTION.md  jax_style.md  workflows.md
docs/audit/: 2026-05-07_framework_audit.md
docs/methods/: _template.md  bartlett.md  bernoulli.md  confidence_distribution_experiment.md  coverage_experiment.md  dynamic_ci_experiment.md  exp_family.md  fisher_rao.md  geodesic_normal.md  identity.md  learned_eta.md  lrt.md  lrto.md  mixture.md  normal_normal.md  ot.md  ot_normal.md  power_law.md  score.md  scoreo.md  signed_root.md  smoothness_experiment.md  wald.md  waldo.md  width_experiment.md
docs/notes/: 2026-05-09-mixture-smoothness-and-learned-eta-tails.md  2026-05-09-phase-g-v4-fix.md  2026-05-10-eta-conventions-and-loss-derivation.md  2026-05-10-experimental-matrix-recap.md  2026-05-10-followup-todo.md  2026-05-10-learned-eta-intervention-design.md  2026-05-10-mixture-cd-variance-instability.md  2026-05-11-fisher-rao-cd-var-hyperparams.md  2026-05-11-fisher-rao-vs-others-smoothness.md  2026-05-11-row-13b-loss-specificity-cross-scheme.md  2026-05-12-cross-scheme-wald-audit.md  2026-05-12-tilted-trinity-derivation.md  README.md
docs/paper/: paper-draft.md
experiments/: canonical_bernoulli_mixture_v4.yaml  canonical_bernoulli_powerlaw.yaml  canonical_bernoulli_powerlaw_v4.yaml  canonical_normal_normal_fisher_rao_v4.yaml  canonical_normal_normal_mixture_v4.yaml  canonical_normal_normal_ot.yaml  canonical_normal_normal_ot_v4.yaml  canonical_normal_normal_powerlaw.yaml  canonical_normal_normal_powerlaw_v4.yaml
legacy/scripts/: plot_estimators.py  run_simulations.py  train_monotonic_eta_mlp.py
scripts/: compare_geodesic_smoothness.py  figures.py  full_loss_landscape_probe.py  generate_all.py  generate_tables.py  loss_landscape_probe.py  per_slice_optimum_sweep.py  plot_ci_widths.py  plot_coverage.py  plot_dynamic_tilting.py  plot_estimators.py  plot_regimes.py  plot_summary.py  plot_theory.py  plot_tilting.py  plot_training_diagnostics.py  plot_v4_eta_curves.py  probe_calibrated_benchmark.py  probe_continuous_kd.py  probe_eta_curves.py  probe_function_constrained_min.py  probe_loss_distance.py  probe_mixture_cd_var_landscape.py  probe_optimal_eta_and_ci.py  probe_per_theta_test_argmin.py  probe_phase2_analytic_teacher.py  probe_phase2_calibrated_teacher.py  probe_phase2_teacher.py  probe_single_slice_train.py  probe_systematic_evaluation.py  probe_two_slice_discrim.py  probe_v4_hyperparam_audit.py  probe_v4_per_slice_eval.py  regen_bernoulli_smoke.py  regen_headline.py  run.py  run_wald_audit.py  train_learned_eta.py  train_optimal_eta_mlp.py  trained_vs_optimal_sweep.py
src/frasian/: __init__.py  _default_cells.py  _errors.py  _jax_setup.py  _parallel.py  _registry.py  _registry_bootstrap.py  _runner.py  confidence.py  config.py  figure_style.py  tilting.py  uncertainty.py
src/frasian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/experiments/: test_confidence_distribution_experiment.py  test_coverage_experiment.py  test_dynamic_ci_experiment.py  test_figures_script.py  test_illustrations_smoke.py  test_learned_eta_pipeline.py  test_smoothness_experiment.py  test_width_experiment.py
tests/integration/: test_bernoulli_end_to_end.py  test_diagnostics_integration.py  test_empty_registry.py  test_regen_headline_smoke.py  test_registry.py  test_runner_resilience.py  test_runner_stub_gating.py
tests/properties/: test_bartlett_invariants.py  test_bernoulli_invariants.py  test_cache_invariants.py  test_cd_invariants.py  test_cross_product_tilted_statistic_invariants.py  test_dual_head_invariants.py  test_dynamic_ci_invariants.py  test_eta_net_jax_invariants.py  test_eta_selector_invariants.py  test_eta_transforms.py  test_exp_family_invariants.py  test_fingerprint_invariants.py  test_fisher_rao_invariants.py  test_gaussian_mixture_distribution.py  test_geodesic_normal_invariants.py  test_identity_tilting_invariants.py  test_learned_eta_diagnostics.py  test_learned_eta_invariants.py  test_loss_diff.py  test_lrt_invariants.py  test_lrto_invariants.py  test_mixture_invariants.py  test_normal_distribution.py  test_ot_invariants.py  test_ot_normal_invariants.py  test_power_law_invariants.py  test_registry_invariants.py  test_score_invariants.py  test_scoreo_invariants.py  test_signed_root_invariants.py  test_smoothness_metrics.py  test_validity_net_jax_invariants.py  test_wald_invariants.py  test_waldo_invariants.py
tests/regression/: test_alpha_mode_gating.py  test_antithetic_loss_kind_gating.py  test_antithetic_sampling.py  test_batched_protocol_methods.py  test_bernoulli_coverage.py  test_bernoulli_model.py  test_cache.py  test_cache_learned_invalidation.py  test_cd_constructors.py  test_cd_distances.py  test_cd_grid.py  test_cd_summary_closure.py  test_checkpoint_metadata_compat.py  test_cluster_g_dispatch.py  test_cluster_h_bounds.py  test_cluster_i_cd_numerics.py  test_cluster_j_training.py  test_cluster_k_experiments.py  test_cluster_l_cache.py  test_cluster_m_test_infra.py  test_conditional_eta_equivariance.py  test_conditional_etanet_shapes.py  test_confidence_intervals.py  test_confidence_regions.py  (+71 more)
tools/: check_method_completeness.py  probe_grad_pl_mx_ot.py  probe_input_sensitivity_cross_scheme.py
(+151 files in other folders)
