[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frasian"
version = "0.2.0.dev0"
description = "Frasian inference research framework: cross-product (TiltingScheme x TestStatistic) experiments on a 1D conjugate-Normal sandbox."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Josh Snyder"}
]
keywords = ["statistics", "inference", "confidence-distributions", "waldo", "tilting", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.80",
    "ipython",
    "jupyter",
]
ml = [
    "torch>=2.0",
    "h5py>=3.8",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "L0: scalar math primitives (atol 1e-12)",
    "L1: protocol invariants (hypothesis property tests)",
    "L2: array-result regression vs committed baselines",
    "L3: statistical (KS uniformity, coverage at nominal level)",
    "L4: end-to-end Experiment on a small grid",
    "L5: cross-product cells, smoke mode, nightly only",
    "slow: deselect with -m 'not slow'",
    "properties: alias for L1, used by registry-driven test discovery",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
