[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frasian"
version = "0.2.0.dev0"
description = "Frasian inference research framework: cross-product (TiltingScheme x TestStatistic) experiments on a 1D conjugate-Normal sandbox."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Josh Snyder"}
]
keywords = ["statistics", "inference", "confidence-distributions", "waldo", "tilting", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "diffrax>=0.6",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.80",
    "joblib>=1.3",
    "ipython",
    "jupyter",
]
ml = [
    "h5py>=3.8",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
# `scripts/` is not an installed package; tests import from it
# (e.g. `tests/integration/test_regen_headline_smoke.py` →
# `scripts.regen_headline._compute_table`). `python -m pytest`
# auto-prepends CWD to `sys.path` so this works at the CI command
# line, but invoking the `pytest` binary directly does not. Adding
# the project root to `pythonpath` makes both invocations resolve
# `import scripts.<x>` consistently.
pythonpath = ["."]
filterwarnings = [
    # Phase 4 skeptic §5: surface every RuntimeWarning emitted by the
    # learned-η subpackage so a metadata-mismatch / NaN-drift / class-
    # degenerate warning does not get suppressed by Python's default
    # "show once per (message, module, lineno)" filter.
    "error::RuntimeWarning:frasian.learned.training._checkpoint",
    "error::RuntimeWarning:frasian.learned.training._losses_compose",
    "error::RuntimeWarning:frasian.learned.training._train_loop",
    "error::RuntimeWarning:frasian.learned.eta_artifact",
]
markers = [
    "L0: scalar math primitives (atol 1e-12)",
    "L1: protocol invariants (hypothesis property tests)",
    "L2: array-result regression vs committed baselines",
    "L3: statistical (KS uniformity, coverage at nominal level)",
    "L4: end-to-end Experiment on a small grid",
    "L5: cross-product cells, smoke mode, nightly only",
    "slow: deselect with -m 'not slow'",
    "nightly: long-running calibration regressions; deselect with -m 'not nightly'",
    "properties: alias for L1, used by registry-driven test discovery",
    "regression: alias for L2/L4 array-level regression tests with committed baselines",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["legacy", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
  "E501",  # line too long — ignore until reformat decision
  "B008",  # function call in default arg — common in dataclasses
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811", "E402"]
"tests/properties/*" = ["F401", "F811"]
"src/frasian/_registry_bootstrap.py" = ["F401"]
"src/frasian/learned/training/__init__.py" = ["E402"]
"src/frasian/experiments/illustrations/learned_eta_demo.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["frasian"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["legacy/", "tests/properties/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*", "h5py.*", "pandas.*", "yaml.*", "hypothesis.*", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jax", "jax.*", "jaxlib", "jaxlib.*", "equinox", "equinox.*", "optax", "optax.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frasian.learned.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "frasian.tilting.*"
warn_return_any = true
